started working on the presentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -25,8 +25,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section><h1>Data Logger</h1><h2>La gestion des objets connectés a la portée de tous</h2></section>
+				<section><h2>Voici bob</h2><img src="https://static.toiimg.com/thumb/msid-50704439,width-640,resizemode-4/50704439.jpg"/><div class="fragment">Arrive data logger, son sauveur !</div></section>
+				<section>
+					<h2>Un projet modulaire</h2>
+					<ul>
+						<li class="fragment">Le back-end, gérant les capteurs</li>
+						<li class="fragment">Le middle-end, gérant les paramètres et la sécurité</li>
+						<li class="fragment">Le front-end, affichant les informations à l'utilisateur</li>
+					</ul>
+				</div>
+			
 			</div>
 		</div>
 
