--- a/presentation/index.html
+++ b/presentation/index.html
@@ -28,14 +28,26 @@
 				<section><h1>Data Logger</h1><h2>La gestion des objets connectés a la portée de tous</h2></section>
 				<section><h2>Voici bob</h2><img src="https://static.toiimg.com/thumb/msid-50704439,width-640,resizemode-4/50704439.jpg"/><div class="fragment">Arrive data logger, son sauveur !</div></section>
 				<section>
+					<h2>Mais qu'est ce donc que Data Logger ?</h2>
+					<div class="fragment">Un projet full stack pour la gestion complète d'un écosysteme d'objets connectés.</div>
+				</section>
+				<section>
 					<h2>Un projet modulaire</h2>
 					<ul>
 						<li class="fragment">Le back-end, gérant les capteurs</li>
-						<li class="fragment">Le middle-end, gérant les paramètres et la sécurité</li>
+						<li class="fragment">Le middle-end, gérant le serveur</li>
 						<li class="fragment">Le front-end, affichant les informations à l'utilisateur</li>
 					</ul>
-				</div>
-			
+				</section>
+				<section>
+					<h2>Plutôt que des longs discours, voici une démonstration !</h2>
+				</section>
+				<section>
+					<h2>En conclusion</h2>
+					<div class="fragment">Un projet ambitieux</div>
+					<div class="fragment">Du code modulaire</div>
+					<div class="fragment">Presque fonctionnel (#projetPourLAnProchain)</div>
+				</section>
 			</div>
 		</div>
 
